# gtm-signal-intelligence

./: .gitignore  README.md  SHIP_POST_DAY7.md  gtm_ai_sprint_master_plan.md
.genesis/: DONE.html  KICKOFF.md  (+5 more)
gtm-cli-warmup/: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
gtm-cli-warmup/docs/: linkedin-day-01-kickoff.md
gtm-cli-warmup/notebooks/lead_extractor/: README.md  lead_extractor.ipynb  synthetic_inputs.py
gtm-cli-warmup/src/gtm_cli_warmup/: __init__.py  cli.py  cost.py  describe.py  lead.py  models.py  pricing.py
gtm-cli-warmup/tests/: test_cost.py  test_lead.py
gtm-knowledge-base/: PROGRESS.md  README.md  app.py  pyproject.toml
gtm-knowledge-base/data/northstar/: README.md
gtm-knowledge-base/data/northstar/case-studies/: series-b-devtools.md  series-c-fintech.md  series-c-marketing-tech.md  series-d-vertical-saas.md
gtm-knowledge-base/data/northstar/company/: about.md  analyst-quotes.md  customer-list.md  leadership.md
gtm-knowledge-base/data/northstar/marketing/: blog-forecast-accuracy.md  blog-pipeline-hygiene.md  for-vp-revops.md  for-vp-sales.md  homepage.md
gtm-knowledge-base/evals/: golden_qa.jsonl  judges.py  metrics.py  report.json  report.md  run_eval.py
gtm-knowledge-base/scripts/: check_corpus.sh
gtm-knowledge-base/src/gtm_kb/: __init__.py  answer_gen.py  chunker.py  citations.py  config.py  embeddings.py  ingest.py  loader.py  models.py  query.py  rag.py  reranker.py  store.py  text.py
gtm-knowledge-base/tests/: test_chunker.py  test_day5_e2e.py  test_day5_llm.py  test_day5_rag.py  test_day6_evals.py  test_embeddings.py  test_ingest_query.py  test_loader.py
(+21 files in other folders)
