[project]
name = "gtm-cli-warmup"
version = "0.1.0"
description = "Anthropic SDK warmup CLI with structured output and per-call cost tracking."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.70",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gtm-cli-warmup = "gtm_cli_warmup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_cli_warmup"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
