[project]
name = "gtm-kb"
version = "0.1.0"
description = "Northstar knowledge-base RAG: section-based ingestion into Chroma + BM25 with a pluggable, key-aware embedder. Day 5: reranking, cited answers, and Streamlit UI."
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "anthropic>=0.28",
    "pydantic>=2.0",
    "streamlit>=1.28",
]

[project.optional-dependencies]
# Real embedding backends — used automatically when the matching API key is set.
voyage = ["voyageai>=0.2"]
openai = ["openai>=1.30"]
dev = ["pytest>=8.0"]

[project.scripts]
gtm-kb-ingest = "gtm_kb.ingest:main"
gtm-kb-query = "gtm_kb.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_kb"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
